# mental-health-diagnostic

./: .gitignore  app.py  discussion.txt  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
pdf_gen/: score_report.py  section_report.py
pipeline/: client.py  extract_job.py  partition_job.py  schema.py
templates/: score_report.html  section_report.html
